--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ajay K",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
