--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.21.1",
     "fontsource-roboto": "^3.0.3",
     "react": "^16.13.1",
+    "react-country-region-selector": "^3.3.0",
     "react-dom": "^16.13.1",
+    "react-phone-number-input": "^3.1.27",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
