--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "socket.io": "^2.3.0",
+    "twilio": "^3.68.0",
     "validator": "^13.1.17"
   }
 }
