--- a/Admin/package.json
+++ b/Admin/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,6 +13,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-admin": "^3.16.3",
+    "react-country-region-selector": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
