--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ajay K",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.34.0",
     "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -16,7 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.7",
-    "multer": "^1.4.2",
+    "multer": "^1.4.3",
     "nodemailer": "^6.4.11",
     "socket.io": "^2.3.0",
     "twilio": "^3.68.0",
