--- a/Admin/package.json
+++ b/Admin/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "use-file-picker": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
