Added token expiration and uuid data in token instead of date. Pending token splitting

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.10.7",
     "redis": "^4.0.4",
     "twilio": "^3.68.0",
+    "uuid": "^8.3.2",
     "validator": "^13.1.17"
   }
 }
